RESOLVED FIXED219576
[JSC] get / set for object literal and class should not be escaped
https://bugs.webkit.org/show_bug.cgi?id=219576
Summary [JSC] get / set for object literal and class should not be escaped
Yusuke Suzuki
Reported 2020-12-06 03:53:27 PST
[JSC] get / set for object literal and class should not be escaped
Attachments
Patch (9.58 KB, patch)
2020-12-06 03:54 PST, Yusuke Suzuki
ashvayka: review+
Yusuke Suzuki
Comment 1 2020-12-06 03:54:43 PST
Alexey Shvayka
Comment 2 2020-12-06 07:34:37 PST
Comment on attachment 415513 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415513&action=review Marvelous, r=me! > Source/JavaScriptCore/ChangeLog:8 > + "get" and "set" for getter and setter should not be escaped one. Perhaps it's worth to explain why not, in contrast to previous patch? Like: Terminal symbols of the lexical grammars are shown in fixed width font [1], and are to appear in a script exactly as written. [1]: https://tc39.es/ecma262/#sec-method-definitions
Yusuke Suzuki
Comment 3 2020-12-06 12:27:11 PST
Comment on attachment 415513 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415513&action=review >> Source/JavaScriptCore/ChangeLog:8 >> + "get" and "set" for getter and setter should not be escaped one. > > Perhaps it's worth to explain why not, in contrast to previous patch? Like: > > Terminal symbols of the lexical grammars are shown in fixed width font [1], and are to appear in a script exactly as written. > > [1]: https://tc39.es/ecma262/#sec-method-definitions That's very nice! I've added :D
Yusuke Suzuki
Comment 4 2020-12-06 12:42:12 PST
Radar WebKit Bug Importer
Comment 5 2020-12-06 12:43:15 PST
Note You need to log in before you can comment on or make changes to this bug.