[JSC] get / set for object literal and class should not be escaped https://bugs.webkit.org/show_bug.cgi?id=219576

Reviewed by Alexey Shvayka.

JSTests:

* stress/escaped-getter-setter-in-class.js: Added.
(testSyntaxError):
(testSyntaxError.String.raw.A.prototype.u0067.u0065.u0074.m):
(testSyntaxError.String.raw.A):
(testSyntaxError.String.raw.A.prototype.u0073.u0065.u0074.m):
* stress/escaped-getter-setter-in-object.js: Added.
(testSyntaxError):
(testSyntaxError.String.raw.u0067.u0065.u0074.m):
(testSyntaxError.String.raw.u0073.u0065.u0074.m):
* test262/expectations.yaml:

Source/JavaScriptCore:

"get" and "set" for getter and setter should not be escaped one.
Terminal symbols of the lexical grammars are shown in fixed width font [1],
and are to appear in a script exactly as written.

[1]: https://tc39.es/ecma262/#sec-method-definitions

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseClass):
(JSC::Parser<LexerType>::parseProperty):

Canonical link: https://commits.webkit.org/232164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270487 268f45cc-cd09-0410-ab3c-d52691b4dbfc